# perfgate

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.md  ROADMAP.md  TESTING.md  action.yml  codecov.yml  commit_msg.txt  mutants.toml  perfgate-compare.json  perfgate-paired.json  test_output.txt
.ci/: perfgate-nightly.toml  (+2 more)
crates/perfgate-adapters/: CLAUDE.md  Cargo.toml  README.md
crates/perfgate-adapters/src/: fake.rs  lib.rs
crates/perfgate-api/: Cargo.toml  README.md
crates/perfgate-api/src/: auth.rs  lib.rs
crates/perfgate-app/: CLAUDE.md  Cargo.toml  README.md
crates/perfgate-app/proptest-regressions/: export.txt
crates/perfgate-app/src/: aggregate.rs  badge.rs  baseline_resolve.rs  bisect.rs  blame.rs  cargo_bench.rs  check.rs  comparison_logic.rs  diff.rs  explain.rs  export.rs  init.rs  lib.rs  paired.rs  promote.rs  ratchet.rs  repair_context.rs  report.rs  sensor_report.rs  trend.rs  watch.rs
crates/perfgate-app/src/snapshots/: perfgate_app__report__tests__report_fail.snap  perfgate_app__report__tests__report_multi_metric.snap  (+2 more)
crates/perfgate-auth/: Cargo.toml  README.md
crates/perfgate-auth/src/: credential_source.rs  lib.rs  source.rs
crates/perfgate-budget/: Cargo.toml  README.md
crates/perfgate-budget/examples/: budget_example.rs
crates/perfgate-budget/src/: lib.rs
crates/perfgate-cli/: CLAUDE.md  Cargo.toml  README.md
crates/perfgate-cli/src/: adoption_packs.rs  artifact_explain.rs  artifact_io.rs  baseline_doctor.rs  check_guidance.rs  cli_parsers.rs  cli_parsing.rs  decision_suggest.rs  doctor.rs  git_context.rs  io.rs  io_locations.rs  json_location.rs  ledger_doctor.rs  main.rs  policy.rs  policy_profiles.rs  repair_context.rs  review.rs  storage.rs
crates/perfgate-cli/tests/: cli_abi_conformance_tests.rs  cli_adoption_tests.rs  cli_aggregate_tests.rs  cli_annotations_tests.rs  cli_baseline_bootstrap_tests.rs  cli_calibrate_tests.rs  cli_check_tests.rs  cli_cockpit_tests.rs  cli_comment_tests.rs  cli_compare_tests.rs  cli_cpu_time_tests.rs  cli_decision_suggest_tests.rs  cli_doctor_tests.rs  cli_export_tests.rs  cli_first_run_e2e_tests.rs  cli_help_snapshot_tests.rs  cli_host_mismatch_tests.rs  cli_init_tests.rs  cli_md_tests.rs  cli_mock_server_tests.rs  cli_paired_tests.rs  cli_performance_decision_example_tests.rs  cli_policy_tests.rs  cli_promote_tests.rs  cli_report_tests.rs  cli_run_tests.rs  cli_server_tests.rs  cli_structured_decision_e2e_tests.rs
crates/perfgate-client/: Cargo.toml  README.md
crates/perfgate-client/src/: client.rs  config.rs  error.rs  fallback.rs  lib.rs  types.rs
crates/perfgate-client/tests/: client_server_integration.rs
crates/perfgate-config/: Cargo.toml  README.md
crates/perfgate-config/src/: lib.rs
crates/perfgate-domain/: CLAUDE.md  Cargo.toml  README.md
crates/perfgate-domain/examples/: blame_example.rs  domain_example.rs
crates/perfgate-domain/proptest-regressions/: lib.txt
crates/perfgate-domain/src/: host.rs  lib.rs  paired.rs
crates/perfgate-error/: Cargo.toml  README.md
crates/perfgate-error/src/: lib.rs
crates/perfgate-export/: Cargo.toml  README.md
crates/perfgate-export/examples/: export_example.rs
crates/perfgate-export/proptest-regressions/: lib.txt
crates/perfgate-export/src/: lib.rs
crates/perfgate-github/: Cargo.toml
crates/perfgate-github/src/: client.rs  comment.rs  error.rs  lib.rs  types.rs
crates/perfgate-host-detect/: Cargo.toml  README.md
crates/perfgate-host-detect/examples/: host-detect_example.rs
crates/perfgate-host-detect/src/: lib.rs
crates/perfgate-ingest/: Cargo.toml  README.md
crates/perfgate-ingest/src/: criterion.rs  gobench.rs  hyperfine.rs  lib.rs  otel.rs  pytest.rs
crates/perfgate-paired/: Cargo.toml  README.md
crates/perfgate-paired/examples/: paired_example.rs
crates/perfgate-paired/src/: lib.rs
crates/perfgate-scaling/: Cargo.toml  README.md
crates/perfgate-scaling/src/: chart.rs  fit.rs  lib.rs  report.rs
crates/perfgate-server/: Cargo.toml  README.md
crates/perfgate-server/assets/: index.html
crates/perfgate-server/src/: auth.rs  error.rs  handlers.rs  lib.rs  metrics.rs  models.rs  oidc.rs  server.rs  testing.rs
crates/perfgate-server/tests/: real_server_integration.rs  server_integration.rs
crates/perfgate-sha256/: Cargo.toml  README.md
crates/perfgate-sha256/benches/: sha256_bench.rs
crates/perfgate-sha256/examples/: sha256_example.rs
crates/perfgate-sha256/src/: lib.rs
crates/perfgate-significance/: Cargo.toml  README.md
crates/perfgate-significance/examples/: significance_example.rs
crates/perfgate-significance/src/: lib.rs
crates/perfgate-stats/: Cargo.toml  README.md
crates/perfgate-stats/benches/: stats_bench.rs
crates/perfgate-stats/examples/: stats_example.rs
crates/perfgate-stats/proptest-regressions/: lib.txt
crates/perfgate-stats/src/: lib.rs  trend.rs
crates/perfgate-summary/: Cargo.toml  README.md
crates/perfgate-summary/src/: lib.rs
crates/perfgate-types/: CLAUDE.md  Cargo.toml  README.md
crates/perfgate-types/examples/: types_example.rs
crates/perfgate-types/proptest-regressions/: lib.txt
crates/perfgate-types/src/: baseline_service.rs  defaults_config.rs  error.rs  io.rs  lib.rs  paired.rs  repair_context.rs  structured_evidence.rs
crates/perfgate-validation/: Cargo.toml  README.md
crates/perfgate-validation/examples/: validation_example.rs
crates/perfgate-validation/proptest-regressions/: lib.txt
crates/perfgate-validation/src/: lib.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: compare_stats.rs  fuzz_budget.rs  fuzz_export_csv.rs  fuzz_host_detect.rs  fuzz_paired.rs  fuzz_sensor_report.rs  fuzz_sha256.rs  fuzz_significance.rs  fuzz_stats.rs  fuzz_validation.rs  parse_compare_receipt.rs  parse_config.rs  parse_duration.rs  parse_report_receipt.rs  parse_run_receipt.rs  render_markdown.rs
xtask/: CLAUDE.md  Cargo.toml  README.md
xtask/src/: lib.rs  main.rs  policy.rs
xtask/src/policy/: common.rs  file_policy.rs  lint_policy.rs  no_panic.rs
xtask/tests/: xtask_smoke_tests.rs
(+318 files in other folders)
