[workspace]
resolver = "2"
members = [
  "crates/perfgate-error",
  "crates/perfgate-types",
  "crates/perfgate-validation",
  "crates/perfgate-stats",
  "crates/perfgate-paired",
  "crates/perfgate-budget",
  "crates/perfgate-domain",
  "crates/perfgate-host-detect",
  "crates/perfgate-sha256",
  "crates/perfgate-render",
  "crates/perfgate-export",
  "crates/perfgate-sensor",
  "crates/perfgate-fake",
  "crates/perfgate-adapters",
  "crates/perfgate-app",
  "crates/perfgate-cli",
  "xtask",
]
exclude = [
  "fuzz",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EffortlessMetrics/perfgate"
authors = ["Effortless Metrics"]
homepage = "https://github.com/EffortlessMetrics/perfgate"
keywords = ["performance", "benchmarking", "budgets", "baseline", "ci"]
categories = ["development-tools", "command-line-utilities"]

# Root package for workspace-level integration tests (BDD/cucumber)
[package]
name = "perfgate-tests"
description = "Workspace integration and BDD tests for perfgate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
publish = false

[dev-dependencies]
cucumber.workspace = true
tempfile.workspace = true
assert_cmd.workspace = true
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
serde_json.workspace = true
toml.workspace = true
perfgate-types.workspace = true
perfgate-validation.workspace = true
perfgate-stats.workspace = true
perfgate-host-detect.workspace = true
perfgate-sha256.workspace = true
perfgate-render.workspace = true
perfgate-export.workspace = true
perfgate-sensor.workspace = true

[[test]]
name = "cucumber"
harness = false

[workspace.dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
humantime = "2.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["formatting"] }
uuid = { version = "1.20.0", features = ["v4"] }
schemars = { version = "1.2.1", features = ["uuid1", "chrono04"] }
shell-words = "1.1.0"
toml = "0.9.8"
statrs = "0.18.0"

# Test deps
assert_cmd = "2.1.2"
predicates = "3.1.3"
insta = { version = "1.46.3", features = ["json"] }
cucumber = "0.22.1"
tempfile = "3.25.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

# Unix-only
libc = "0.2.181"

# Internal crates
perfgate-error = { path = "crates/perfgate-error", version = "0.3.0" }
perfgate-types = { path = "crates/perfgate-types", version = "0.3.0" }
perfgate-validation = { path = "crates/perfgate-validation", version = "0.3.0" }
perfgate-stats = { path = "crates/perfgate-stats", version = "0.3.0" }
perfgate-paired = { path = "crates/perfgate-paired", version = "0.3.0" }
perfgate-budget = { path = "crates/perfgate-budget", version = "0.3.0" }
perfgate-domain = { path = "crates/perfgate-domain", version = "0.3.0" }
perfgate-host-detect = { path = "crates/perfgate-host-detect", version = "0.3.0" }
perfgate-sha256 = { path = "crates/perfgate-sha256", version = "0.3.0" }
perfgate-render = { path = "crates/perfgate-render", version = "0.3.0" }
perfgate-export = { path = "crates/perfgate-export", version = "0.3.0" }
perfgate-sensor = { path = "crates/perfgate-sensor", version = "0.3.0" }
perfgate-fake = { path = "crates/perfgate-fake", version = "0.3.0" }
perfgate-adapters = { path = "crates/perfgate-adapters", version = "0.3.0" }
perfgate-app = { path = "crates/perfgate-app", version = "0.3.0" }
