[workspace]
resolver = "2"
default-members = [
  "crates/perfgate",
  "crates/perfgate-cli",
  "crates/perfgate-server",
]
members = [
  "crates/perfgate-error",
  "crates/perfgate-config",
  "crates/perfgate-api",
  "crates/perfgate-types",
  "crates/perfgate-significance",
  "crates/perfgate-paired",
  "crates/perfgate-budget",
  "crates/perfgate-domain",
  "crates/perfgate-host-detect",
  "crates/perfgate-sha256",
  "crates/perfgate-render",
  "crates/perfgate-export",
  "crates/perfgate-sensor",
  "crates/perfgate-fake",
  "crates/perfgate-adapters",
  "crates/perfgate-profile",
  "crates/perfgate-app",
  "crates/perfgate-ingest",
  "crates/perfgate-cli",
  "crates/perfgate-server",
  "crates/perfgate-client",
  "crates/perfgate-github",
  "crates/perfgate",
  "crates/perfgate-scaling",
  "xtask", "crates/perfgate-selfbench",
]
exclude = [
  "fuzz",
]

[workspace.package]
version = "0.15.1"
edition = "2024"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EffortlessMetrics/perfgate"
authors = ["Effortless Metrics"]
homepage = "https://github.com/EffortlessMetrics/perfgate"
keywords = ["performance", "benchmarking", "budgets", "baseline", "ci"]
categories = ["development-tools", "command-line-utilities"]

# ---------------------------------------------------------------------------
# Workspace lint policy — materialized form of policy/clippy-lints.toml.
#
# The authoritative declaration lives in `policy/clippy-lints.toml`.
# `cargo run -p xtask -- check-lint-policy` verifies that this block is
# at-least-as-strict as the policy. See docs/CLIPPY_POLICY.md for rules
# (no test carveouts, no bare #[allow(...)], expect-with-reason only).
# ---------------------------------------------------------------------------

[workspace.lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"
unexpected_cfgs = "warn"

[workspace.lints.clippy]
# Broad warning baseline. Explicit policy lints below are
# at-least-as-strict for the lints they cover.
all = { level = "warn", priority = -1 }

# Panic-family / abrupt exits.
#
# Lints set to `allow` below are debt-staged: the policy declares them at
# `warn` (or `deny`) as the target, and `policy/clippy-debt.toml` records the
# gap. They are silenced in the workspace so `xtask ci -- -D warnings` does
# not promote ~2.5k existing findings to hard CI failures. The no-panic
# checker (`cargo run -p xtask -- check-no-panic-family`) carries the signal.
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
panic = "allow"
unreachable = "allow"
unwrap_used = "allow"
expect_used = "allow"
get_unwrap = "allow"
unwrap_in_result = "allow"
string_slice = "allow"
indexing_slicing = "allow"
out_of_bounds_indexing = "deny"
unchecked_time_subtraction = "deny"

# UTF-8 / parser safety.
char_indices_as_byte_indices = "deny"
index_refutable_slice = "deny"

# Silent failure.
let_underscore_future = "deny"
let_underscore_must_use = "deny"
let_underscore_lock = "deny"
map_err_ignore = "allow"
assertions_on_result_states = "allow"
lines_filter_map_ok = "allow"

# Async / concurrency.
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
await_holding_invalid_type = "deny"
future_not_send = "warn"
arc_with_non_send_sync = "deny"
rc_mutex = "deny"
mut_mutex_lock = "deny"
readonly_write_lock = "deny"

# Unsafe / memory.
mem_forget = "deny"
forget_non_drop = "deny"
drop_non_drop = "deny"
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"

# Numeric correctness.
float_cmp = "allow"
float_cmp_const = "allow"
float_equality_without_abs = "deny"
lossy_float_literal = "deny"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
invalid_upcast_comparisons = "deny"
cast_abs_to_unsigned = "deny"
cast_enum_truncation = "deny"
cast_nan_to_int = "deny"

# File / process / path footguns.
suspicious_open_options = "deny"
nonsensical_open_options = "deny"
ineffective_open_options = "deny"
path_buf_push_overwrite = "deny"
join_absolute_paths = "deny"
read_line_without_trim = "allow"
exit = "allow"

# API / trait correctness.
iter_not_returning_iterator = "deny"
expl_impl_clone_on_copy = "allow"
infallible_try_from = "deny"
fallible_impl_from = "deny"
error_impl_error = "deny"
result_unit_err = "allow"
result_large_err = "allow"

# Format / good-taste lints.
format_in_format_args = "deny"
to_string_in_format_args = "deny"
unused_format_specs = "deny"
uninlined_format_args = "allow"
manual_let_else = "allow"
manual_ok_or = "allow"
manual_strip = "allow"
manual_split_once = "allow"
filter_map_next = "allow"
flat_map_option = "allow"
match_result_ok = "allow"
needless_collect = "allow"

# Documentation discipline.
missing_panics_doc = "allow"
missing_errors_doc = "allow"

# Suppression governance.
allow_attributes = "allow"
allow_attributes_without_reason = "allow"
blanket_clippy_restriction_lints = "deny"
should_panic_without_expect = "deny"

# Root package for workspace-level integration tests (BDD/cucumber)
[package]
name = "perfgate-tests"
description = "Workspace integration and BDD tests for perfgate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
publish = false

[dev-dependencies]
cucumber.workspace = true
tempfile.workspace = true
assert_cmd.workspace = true
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
serde_json.workspace = true
toml.workspace = true
perfgate-types.workspace = true
perfgate-host-detect.workspace = true
perfgate-sha256.workspace = true
perfgate-render.workspace = true
perfgate-export.workspace = true
perfgate-sensor.workspace = true
perfgate-error.workspace = true
perfgate-budget.workspace = true
perfgate-domain.workspace = true
perfgate-paired.workspace = true
perfgate-app.workspace = true
perfgate-significance.workspace = true
perfgate-config.workspace = true
perfgate-api.workspace = true
perfgate.workspace = true
glob.workspace = true
shell-words.workspace = true

[[test]]
name = "cucumber"
harness = false

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[lints]
workspace = true

[workspace.dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.1", features = ["macros"] }
clap = { version = "4.5.60", features = ["derive"] }
humantime = "2.3.0"
http = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
async-trait = "0.1.86"
time = { version = "0.3.47", features = ["formatting"] }
uuid = { version = "1.21.0", features = ["v4"] }
schemars = { version = "1.2.1", features = ["uuid1", "chrono04"] }
shell-words = "1.1.1"
toml = "0.9.8"
statrs = "0.18.0"
glob = "0.3.2"
notify = { version = "7.0", default-features = false, features = ["macos_kqueue"] }
ctrlc = "3.4"
url = "2.5.4"
regex = "1.12"

# Test deps
assert_cmd = "2.1.2"
predicates = "3.1.4"
insta = { version = "1.46.3", features = ["json"] }
cucumber = "0.22.1"
tempfile = "3.26.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"

# Unix-only
libc = "0.2.182"

# Internal crates
perfgate-error = { path = "crates/perfgate-error", version = "0.15.1" }
perfgate-api = { path = "crates/perfgate-api", version = "0.15.1" }
perfgate-config = { path = "crates/perfgate-config", version = "0.15.1" }
perfgate-types = { path = "crates/perfgate-types", version = "0.15.1" }
perfgate-significance = { path = "crates/perfgate-significance", version = "0.15.1" }
perfgate-domain = { path = "crates/perfgate-domain", version = "0.15.1" }
perfgate-paired = { path = "crates/perfgate-paired", version = "0.15.1" }
perfgate-budget = { path = "crates/perfgate-budget", version = "0.15.1" }
perfgate-host-detect = { path = "crates/perfgate-host-detect", version = "0.15.1" }
perfgate-sha256 = { path = "crates/perfgate-sha256", version = "0.15.1" }
perfgate-render = { path = "crates/perfgate-render", version = "0.15.1" }
perfgate-export = { path = "crates/perfgate-export", version = "0.15.1" }
perfgate-sensor = { path = "crates/perfgate-sensor", version = "0.15.1" }
perfgate-fake = { path = "crates/perfgate-fake", version = "0.15.1" }
perfgate-adapters = { path = "crates/perfgate-adapters", version = "0.15.1" }
perfgate-ingest = { path = "crates/perfgate-ingest", version = "0.15.1" }
perfgate-profile = { path = "crates/perfgate-profile", version = "0.15.1" }
perfgate-app = { path = "crates/perfgate-app", version = "0.15.1" }
perfgate-server = { path = "crates/perfgate-server", version = "0.15.1" }
perfgate-client = { path = "crates/perfgate-client", version = "0.15.1" }
perfgate-scaling = { path = "crates/perfgate-scaling", version = "0.15.1" }
perfgate-github = { path = "crates/perfgate-github", version = "0.15.1" }
perfgate = { path = "crates/perfgate", version = "0.15.1" }
