[package]
name = "perfgate-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
serde_json = "1"
perfgate-types = { path = "../crates/perfgate-types" }
perfgate-app = { path = "../crates/perfgate-app" }

[[bin]]
name = "parse_run_receipt"
path = "fuzz_targets/parse_run_receipt.rs"
test = false
doc = false

[[bin]]
name = "parse_compare_receipt"
path = "fuzz_targets/parse_compare_receipt.rs"
test = false
doc = false

[[bin]]
name = "render_markdown"
path = "fuzz_targets/render_markdown.rs"
test = false
doc = false
