[package]
name = "perfgate-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
humantime = "2"
perfgate-types = { path = "../crates/perfgate-types", features = ["arbitrary"] }
perfgate-domain = { path = "../crates/perfgate-domain" }
perfgate-app = { path = "../crates/perfgate-app" }

[[bin]]
name = "parse_run_receipt"
path = "fuzz_targets/parse_run_receipt.rs"
test = false
doc = false

[[bin]]
name = "parse_compare_receipt"
path = "fuzz_targets/parse_compare_receipt.rs"
test = false
doc = false

[[bin]]
name = "render_markdown"
path = "fuzz_targets/render_markdown.rs"
test = false
doc = false

[[bin]]
name = "parse_config"
path = "fuzz_targets/parse_config.rs"
test = false
doc = false

[[bin]]
name = "parse_duration"
path = "fuzz_targets/parse_duration.rs"
test = false
doc = false

[[bin]]
name = "compare_stats"
path = "fuzz_targets/compare_stats.rs"
test = false
doc = false
