[package]
name = "xtask"
description = "Workspace automation for perfgate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
jsonschema = "0.26"
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
perfgate-types.workspace = true
