[package]
name = "perfgate-adapters"
description = "Std adapters for perfgate (process runner, system metrics, filesystem)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["performance", "process", "metrics", "adapters"]
categories = ["development-tools", "os"]

[dependencies]
perfgate-types.workspace = true
anyhow.workspace = true
thiserror.workspace = true
hostname = "0.4"

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
proptest = "1"
