[package]
name = "perfgate-adapters"
description = "Process runner and system metrics adapters for perfgate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["performance", "benchmarking", "process", "metrics", "system"]
categories = ["development-tools", "os"]

[dependencies]
perfgate-types.workspace = true
anyhow.workspace = true
thiserror.workspace = true
hostname = "0.4"

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
proptest = "1"
