[package]
name = "perfgate-app"
description = "Use-cases and rendering for perfgate receipts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["performance", "benchmarking", "budgets", "baseline", "rendering"]
categories = ["development-tools"]

[dependencies]
perfgate-types.workspace = true
perfgate-domain.workspace = true
perfgate-adapters.workspace = true
anyhow.workspace = true
humantime.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
insta.workspace = true
proptest = "1"
