[package]
name = "perfgate-auth"
description = "Authentication and authorization types for perfgate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
authors.workspace = true

[dependencies]
serde.workspace = true
chrono = { version = "0.4.39", features = ["serde"] }
perfgate-error.workspace = true
uuid = { workspace = true }
schemars.workspace = true

[dev-dependencies]
serde_json.workspace = true
