[package]
name = "perfgate-auth"
description = "Authentication and authorization types for perfgate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
documentation = "https://docs.rs/perfgate-auth"
authors.workspace = true
keywords = ["authentication", "authorization", "api-key", "perfgate"]
categories = ["authentication"]

[dependencies]
serde.workspace = true
chrono = { version = "0.4.39", features = ["serde"] }
perfgate-error.workspace = true
uuid = { workspace = true }
schemars.workspace = true
serde_json.workspace = true
toml.workspace = true
