[package]
name = "perfgate-budget"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Budget evaluation logic for performance thresholds"
readme = "README.md"
documentation = "https://docs.rs/perfgate-budget"
keywords = ["budget", "threshold", "performance", "regression"]
categories = ["development-tools"]

[dependencies]
perfgate-types.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest = "1.7"
[lints]
workspace = true
