[package]
name = "perfgate"
description = "CLI for perfgate performance budgets and baseline diffs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/perfgate"
authors.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
perfgate-types.workspace = true
perfgate-domain.workspace = true
perfgate-adapters.workspace = true
perfgate-app.workspace = true
anyhow.workspace = true
clap.workspace = true
humantime.workspace = true
serde.workspace = true
serde_json.workspace = true
shell-words = "1.1.0"
regex = "1.12"
toml.workspace = true
uuid.workspace = true
tokio.workspace = true
object_store = { version = "0.12", features = ["aws", "gcp"] }
url = "2.5.7"

[dev-dependencies]
assert_cmd.workspace = true
insta.workspace = true
jsonschema = "0.26"
predicates.workspace = true
tempfile = "3"
serde_json.workspace = true
