[package]
name = "perfgate-cli"
description = "CLI for perfgate performance budgets and baseline diffs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/perfgate-cli"
authors.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "perfgate"
path = "src/main.rs"

[dependencies]
perfgate.workspace = true
perfgate-client.workspace = true
anyhow.workspace = true
glob.workspace = true
clap.workspace = true
humantime.workspace = true
serde.workspace = true
serde_json.workspace = true
shell-words = "1.1.0"
regex = "1.12"
toml.workspace = true
uuid.workspace = true
tokio.workspace = true
object_store = { version = "0.12", features = ["aws", "gcp"] }
url = "2.5.7"
tracing = "0.1"

[dev-dependencies]
assert_cmd.workspace = true
insta.workspace = true
jsonschema = "0.26"
predicates.workspace = true
tempfile = "3"
serde_json.workspace = true
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
