[package]
name = "perfgate-config"
description = "Configuration loading and merging logic for perfgate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
perfgate-types.workspace = true
perfgate-client.workspace = true
url.workspace = true

[dev-dependencies]
tempfile = "3"
