[package]
name = "perfgate-domain"
description = "Pure domain logic for perfgate (stats, budgets, comparisons)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
perfgate-types = { path = "../perfgate-types" }
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
proptest = "1"
