[package]
name = "perfgate-domain"
description = "Pure domain logic for perfgate (stats, budgets, comparisons)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["performance", "benchmarking", "statistics", "domain"]
categories = ["development-tools", "mathematics"]

[dependencies]
perfgate-types.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
proptest = "1"
