[package]
name = "perfgate-domain"
description = "I/O-free budget policy and comparisons for perfgate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["performance", "benchmarking", "budgets", "regression", "statistics"]
categories = ["development-tools", "mathematics"]

[dependencies]
perfgate-types.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
proptest = "1"
