[package]
name = "perfgate-error"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Unified error types for perfgate"
readme = "README.md"
keywords = ["error", "error-handling"]
categories = ["development-tools"]

[dependencies]
thiserror.workspace = true

[dev-dependencies]
proptest = "1.7"
