[package]
name = "perfgate-export"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Export formats for perfgate benchmarks (CSV, JSONL, HTML, Prometheus)"
readme = "README.md"
documentation = "https://docs.rs/perfgate-export"
keywords = ["export", "csv", "prometheus", "benchmarking"]
categories = ["development-tools"]

[dependencies]
perfgate-types.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

[dev-dependencies]
proptest = "1.7"
insta.workspace = true

[lints]
workspace = true
