[package]
name = "perfgate-github"
description = "Workspace-only compatibility wrapper for perfgate::integrations::github"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["github", "pull-request", "performance", "comments"]
categories = ["development-tools"]
publish = false

[dependencies]
perfgate = { workspace = true, features = ["github"] }

[lints]
workspace = true
