[package]
name = "perfgate-host-detect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Host mismatch detection for benchmarking noise reduction"
readme = "README.md"
documentation = "https://docs.rs/perfgate-host-detect"
keywords = ["benchmarking", "host", "mismatch", "detection"]
categories = ["development-tools"]

[dependencies]
perfgate-types.workspace = true

[dev-dependencies]
proptest = "1.7"

[lints]
workspace = true
